Fix an overflow that happens for some challenge descriptions

--- a/src/client/less/_teampage.less
+++ b/src/client/less/_teampage.less
@@ -180,6 +180,10 @@
   margin-top: 40px;
 }
 
+.bo-team-post {
+  max-width: 100%;
+}
+
 #bo-team-location {
   padding-top: 10px;
   text-align: center;
